--- a/vignettes/Case studies/DPMFA_LEON-T.Rmd
+++ b/vignettes/Case studies/DPMFA_LEON-T.Rmd
@@ -416,6 +416,7 @@ cleaned_dfs <- lapply(sample_dfs, process_sample_df)
 # Assign the cleaned dataframes back to their original names in the global environment
 names(cleaned_dfs) <- sample_df_names
 list2env(cleaned_dfs, envir = .GlobalEnv)
+
 ```
 
 ```{r Make some figures to show the values chosen from the distributions}
@@ -430,7 +431,7 @@ alpha_water <- alpha_water$data[[1]]
 ggplot(alpha_water, mapping = aes(x = value)) +
   geom_histogram(bins=50, color="#00AFBB", fill=NA) +
   labs(title = "Distribution of attachment efficiency for water compartments",
-       x = "Alpha") +
+       x = "Alpha") + scale_x_continuous(trans='log10') +
   theme_classic()
 
 alpha_soil <- sample_df_Tyre_wear_RUBBER |>
