--- a/vignettes/Case studies/DPMFA_LEON-T.Rmd
+++ b/vignettes/Case studies/DPMFA_LEON-T.Rmd
@@ -27,6 +27,7 @@ Plastics. Here, we initialize the world for plastics.
 library(lhs)
 library(readxl)
 library(viridis)
+library(doParallel)
 library(trapezoid)
 
 source("baseScripts/initWorld_onlyPlastics.R")
@@ -63,7 +64,7 @@ source_names <- unique(data_long$Source)
 
 print(source_names)
 
-source_of_interest <- c("Tyre wear", "Paint")
+source_of_interest <- c("Tyre wear")
 
 if (all(!is.na(source_of_interest))) {
   # Check if all the elements of source_of_interest are present in data_long$Source
@@ -124,26 +125,72 @@ data_filtered <- data_summed |>
 
 ```
 
-```{r Make a df with the emissions}
+```{r Make a separate emission df for every polymer}
+runs <- 1000
 TESTING = T
-if(TESTING==TRUE) data_filtered <- data_filtered |> filter(RUN<11)
+if(TESTING==TRUE) data_filtered <- data_filtered |> filter(RUN<(runs+1))
 
 unique_combinations <- data_filtered |>
   distinct(Source, Polymer)
 
-if(type == "PMFA"){
-  emis_df <- data_filtered |>
-      nest(Emis = c(RUN, value))
-} else if(type == "DPMFA"){
-  emis_df_dyn <- data_filtered |>
+emis_df_names <- c()
+
+for(i in 1:nrow(unique_combinations)){
+  source <- unique_combinations$Source[i]
+  pol <- unique_combinations$Polymer[i]
+  
+  filtered <- data_filtered |>
+    filter(Polymer == pol)
+  
+  if(type == "DPMFA"){
+    # Make an emission dataframe for the dynamic uncertain solver
+    emis_df_dyn <- filtered |>
       group_by(Abbr, Year) |>
       rename(Timed = Year) |>
       mutate(Timed = as.double(Timed)*(365.25*24*3600)) |>
-      nest(Emis = c(RUN, value))
-  
-  ymin <- min(emis_df_dyn$Year)
-  ymax <- max(emis_df_dyn$Year)
+      nest(Emis = c(RUN, value)) 
+    
+    df_name <- paste0("emis_dyn_", source, "_", pol)
+    
+    assign(df_name, emis_df_dyn)
+    
+    emis_df_names <- c(emis_df_names, df_name)
+    
+    ymin <- min(emis_df_dyn$Year)
+    ymax <- max(emis_df_dyn$Year)
+    
+  } else if(type == "PMFA"){
+    
+    # Make an emission dataframe for the steady uncertain solver
+    emis_df_ss <- filtered |>
+      nest(Emis = c(RUN, value)) 
+    
+    source_name <- str_replace_all(source, "[()]", "")  # Remove parentheses
+    source_name <- str_replace_all(source, " ", "_")   # Replace spaces with underscores
+    
+    df_name <- paste0("emis_ss_", source_name, "_", pol)
+    
+    assign(df_name, emis_df_ss)
+    
+    emis_df_names <- c(emis_df_names, df_name)
+  }
 }
+```
+
+For the source tyre wear, we want to estimate the concentration of TWP in road side soil. We will do this by rescaling the othersoil compartment to the size of road side soil in the EU. 
+
+To estimate this, two datapoints are needed: 
+- The total road length in the EU (https://erf.be/statistics/road-network-2024/)
+- The mean width of road side soil
+
+```{r Estimate area of road side soil in the EU}
+
+
+
+
+road_length_EU <- 4852242 # Total Road length (km) EU in 2013, will try to find a more recent source
+RL_km <- road_length_EU*1000
+
 ```
 
 ```{r Functions for distributions}
@@ -202,10 +249,11 @@ trapezoidal <- function(u, a, b, c, d) {
 
 ## Prepare excel data
 
-```{r Prepare excel data}
+```{r}
 # Path to excel file with distribution values
-#path_dist <- "N:/Documents/Simplebox/Microplastic_variables_v2.xlsx"
+path_dist <- "N:/Documents/Simplebox/Microplastic_variables_v2.xlsx"
 path_dist <- "vignettes/Case studies/CaseData/Microplastic_variables_v2.xlsx"
+
 
 excel_df <- read_excel(path_dist, sheet = "Polymer_data") 
 
@@ -220,6 +268,7 @@ all_SC <- c(water, soil, sediment, air)
 materials <- c("HDPE", "LDPE", "PP", "PS", "PVC", "Acryl", "PA", "PET", "ABS", "EPS", "PC", "PMMA", "PUR", "RUBBER", "OTHER")
 species <- c("Large", "Small", "Solid")
 small_large <- c("Small", "Large")
+
 scales <- c("Arctic", "Tropic", "Moderate", "Regional", "Continental")
 
 explode <- function(df, target_col, explode_value, new_values) {
@@ -245,86 +294,95 @@ suppressWarnings({
 ```
 
 
-```{r Make sample df}
+```{r}
 # Generate the correct number of samples
-n_samples <- nrow(emis_df$Emis[[1]]) # Number of emission runs 
-sample_df <- data.frame()
+n_samples <- nrow(emis_df_ss$Emis[[1]]) # Number of emission runs 
+source_names <- c()
+sample_df_names <- c()
 
 for(i in 1:nrow(unique_combinations)){
-    source <- unique_combinations$Source[i]
-    pol <- unique_combinations$Polymer[i]
+  source <- unique_combinations$Source[i]
+  pol <- unique_combinations$Polymer[i]
     
-    input_vars <- var_df |>
-      filter(if_all(c(Distribution, a, b), ~ !is.na(.))) |>
-      filter(Polymer == pol) |>
-      group_by(VarName, Scale, SubCompart, Species, Polymer) |>
-      filter(if (n() > 1) MP_source == source | (MP_source == "" & !any(MP_source == source)) else TRUE) %>%
-      ungroup()
+  input_vars <- var_df |>
+    filter(if_all(c(Distribution, a, b), ~ !is.na(.))) |>
+    filter(Polymer == pol) |>
+    group_by(VarName, Scale, SubCompart, Species, Polymer) |>
+    filter(if (n() > 1) MP_source == source | (MP_source == "" & !any(MP_source == source)) else TRUE) %>%
+    ungroup()
+  
+  varnames <- input_vars$VarName
+  
+  n_vars <- nrow(input_vars)
+  
+  # Generate LHS
+  lhs_samples <- randomLHS(n_samples, n_vars)
+  var_df_names <- c()
+  
+  for(j in 1:nrow(input_vars)){
+    df <- input_vars[j, ]
     
-    varnames <- input_vars$VarName
+    varname <- df$VarName
     
-    n_vars <- nrow(input_vars)
+    var <- df |>
+      select(VarName, Scale, SubCompart, Species, a, b, c, d)
     
-    # Generate LHS
-    lhs_samples <- randomLHS(n_samples, n_vars)
-    var_df_names <- c()
+    name <- paste0("var", j)
+    var_df_names <- c(var_df_names, name)
     
-    for(j in 1:nrow(input_vars)){
-      df <- input_vars[j, ]
-      
-      varname <- df$VarName
-      
-      var <- df |>
-        select(VarName, Scale, SubCompart, Species, a, b, c, d)
-      
-      name <- paste0("var", j)
-      var_df_names <- c(var_df_names, name)
-      
-      assign(name, var)
-    }  
+    assign(name, var)
+  }  
+  
+  params <- tibble(
+    varName = sapply(var_df_names, function(v) get(v)$VarName),
+    Scale = sapply(var_df_names, function(v) get(v)$Scale),
+    SubCompart = sapply(var_df_names, function(v) get(v)$SubCompart),
+    Species = sapply(var_df_names, function(v) get(v)$Species),
+    data = lapply(var_df_names, function(v) {
+      df <- get(v)
+      tibble(id = c("a", "b", "c", "d"), value = c(df$a, df$b, df$c, df$d))
+    }))
+  
+  sample_df <- params
+  
+  # Transform each LHS sample column to the corresponding  distribution
+  for (k in 1:n_vars) {
+    a <- filter(params$data[[k]], id == "a") |> pull(value)
+    b <- filter(params$data[[k]], id == "b") |> pull(value)
+    c <- filter(params$data[[k]], id == "c") |> pull(value)
+    d <- filter(params$data[[k]], id == "d") |> pull(value)
     
-    params <- tibble(
-      varName = sapply(var_df_names, function(v) get(v)$VarName),
-      Scale = sapply(var_df_names, function(v) get(v)$Scale),
-      SubCompart = sapply(var_df_names, function(v) get(v)$SubCompart),
-      Species = sapply(var_df_names, function(v) get(v)$Species),
-      data = lapply(var_df_names, function(v) {
-        df <- get(v)
-        tibble(id = c("a", "b", "c", "d"), value = c(df$a, df$b, df$c, df$d))
-      }))
-    
-    sample_df_var <- params
-    
-    # Transform each LHS sample column to the corresponding  distribution
-    for (k in 1:n_vars) {
-      a <- filter(params$data[[k]], id == "a") |> pull(value)
-      b <- filter(params$data[[k]], id == "b") |> pull(value)
-      c <- filter(params$data[[k]], id == "c") |> pull(value)
-      d <- filter(params$data[[k]], id == "d") |> pull(value)
-      
-      if(input_vars$Distribution[k] == "Triangular"){
-        samples <- triangular(lhs_samples[, k], a, b, c)
-      } else if(input_vars$Distribution[k] == "Uniform"){
-        samples <- uniform(lhs_samples[, k], a, b)
-      } else if(input_vars$Distribution[k] == "Powerlaw"){
-        samples <- power_law(lhs_samples[, k], a, b, c)
-      } else if(input_vars$Distribution[k] == "Trapezoidal"){
-        samples <- trapezoidal(lhs_samples[, k], a, b, c, d)
-      }
-      
-      # Create a new tibble for 'data' with samples replacing original values
-      new_data <- tibble(value = samples)
-      
-      # Update the data column in the sample_df
-      sample_df_var$data[[k]] <- new_data
+    if(input_vars$Distribution[k] == "Triangular"){
+      samples <- triangular(lhs_samples[, k], a, b, c)
+    } else if(input_vars$Distribution[k] == "Uniform"){
+      samples <- uniform(lhs_samples[, k], a, b)
+    } else if(input_vars$Distribution[k] == "Powerlaw"){
+      samples <- power_law(lhs_samples[, k], a, b, c)
+    } else if(input_vars$Distribution[k] == "Trapezoidal"){
+      samples <- trapezoidal(lhs_samples[, k], a, b, c, d)
+      #samples <- trapezoidal(lhs_samples[, k], a, b, c, d)
     }
     
-    sample_df_var <- sample_df_var |>
-      mutate(Polymer = pol) |>
-      mutate(Source = source)
+    # Create a new tibble for 'data' with samples replacing original values
+    new_data <- tibble(value = samples)
     
-    sample_df <- rbind(sample_df, sample_df_var)
+    # Update the data column in the sample_df
+    sample_df$data[[k]] <- new_data
+  }
+    
+  source_name <- str_replace_all(source, "[()]", "")  # Remove parentheses
+  source_name <- str_replace_all(source, " ", "_")   # Replace spaces with underscores
+  source_names <- paste0(source_names, source_name)
+  
+  # Save a separate dataframe for each material
+  sample_df_name <- paste0("sample_df_", source_name, "_", pol)
+  sample_df_names <- c(sample_df_names, sample_df_name)
+  
+  assign(sample_df_name, sample_df)
+  
+  sample_dfs <- lapply(sample_df_names, get)
 }
+
 
 # Function to process each dataframe
 process_sample_df <- function(sample_df, # data frame with nested samples in data
@@ -340,7 +398,6 @@ process_sample_df <- function(sample_df, # data frame with nested samples in dat
                                        "agriculturalsoil", "othersoil",
                                        "lake", "sea", "deepocean", "river"), # all SimpleBox subcompartment names
                               soil=c("naturalsoil", "agriculturalsoil", "othersoil")) { # all SimpleBox soil compartments
-  
   exploded_scales <- explode(sample_df, target_col = "Scale", explode_value = "any", new_values = scales)
   exploded_water <- explode(exploded_scales, target_col = "SubCompart", explode_value = "Water", new_values = water)
   exploded_soil_sediment <- explode(exploded_water, target_col = "SubCompart", explode_value = "Soil_Sediment", new_values = soil_sediment)
@@ -354,14 +411,16 @@ process_sample_df <- function(sample_df, # data frame with nested samples in dat
   return(sample_df_cleaned)
 }
 
-sample_df <- process_sample_df(sample_df)
+# Apply the processing function to each dataframe in the list
+cleaned_dfs <- lapply(sample_dfs, process_sample_df)
+
+# Assign the cleaned dataframes back to their original names in the global environment
+names(cleaned_dfs) <- sample_df_names
+list2env(cleaned_dfs, envir = .GlobalEnv)
 
 ```
 
 ```{r Make some figures to show the values chosen from the distributions}
-sample_df_Tyre_wear_RUBBER <- sample_df |>
-  filter(Source == "Tyre wear")
-
 alpha_water <- sample_df_Tyre_wear_RUBBER |>
   filter(varName == "alpha") |>
   filter(SubCompart == "sea") |>
@@ -387,7 +446,7 @@ alpha_soil <- alpha_soil$data[[1]]
 ggplot(alpha_soil, mapping = aes(x = value)) +
   geom_histogram(bins=50, color="#00AFBB", fill=NA) +
   labs(title = "Distribution of attachment efficiency for soil and sediment compartments",
-       x = "Alpha")+ scale_x_continuous(trans='log10') +
+       x = "Alpha")+
   theme_classic()
 
 rads <- sample_df_Tyre_wear_RUBBER |>
@@ -448,56 +507,40 @@ Steady state, DPMFA = dynamic)
 
 ```{r Solve steady state}
 start_time <- Sys.time()
-
-solutions <- data.frame()
-concentrations <- data.frame()
+solved_df_names <- c()
+concentration_df_names <- c()
 
 if(type == "PMFA"){ 
   World$NewSolver("UncertainSolver")
   
   for(i in 1:nrow(unique_combinations)){
     source <- unique_combinations$Source[i]
+    source <- str_replace_all(source, "[()]", "")  # Remove parentheses
+    source <- str_replace_all(source, " ", "_")   # Replace spaces with underscores
     pol <- unique_combinations$Polymer[i]
     
-    emis_source <- emis_df |>
-      filter(Source == source) |>
-      filter(Polymer == pol) #|>
-      #select(Abbr, Emis)
+    # Get the emissions (kg)
+    emis_df_name <- emis_df_names[i]
+    sample_df_name <- sample_df_names[i]
     
-    sample_source <- sample_df |>
-      filter(Source == source) |>
-      filter(Polymer == pol) |>
-      select(-c(Source, Polymer))
-    
-    solved <- World$Solve((emis_source), needdebug = F, sample_source)
-    solution <- solved$SteadyStateMass |>
-      mutate(Polymer = pol) |>
-      mutate(Source = source)
-    
-    if (nrow(solutions) == 0) {
-      solutions <- solution  # Initialize with the structure of `solution`
-    } else {
-      solutions <- rbind(solutions, solution)
-    }
+    solved <- World$Solve(get(emis_df_name), needdebug = FALSE, get(sample_df_name))
+    solved_df_name <- paste0("solved_ss_", source, "_", pol)
+    assign(solved_df_name, solved)
+    solved_df_names <- c(solved_df_names, solved_df_name)
     
     # Get the concentrations
-    conc <- World$GetConcentration() |>
-      mutate(Polymer = pol) |>
-      mutate(Source = source)
-    
-    print(colnames(conc))
-    
-    if (nrow(concentrations) == 0) {
-      concentrations <- conc  # Initialize with the structure of `solution`
-    } else {
-      concentrations <- rbind(concentrations, conc)
-    }
+    conc <- World$GetConcentration()
+    conc_df_name <- paste0("concentration_ss_", source, "_", pol)  
+    assign(conc_df_name, conc)
+    concentration_df_names <- c(concentration_df_names, conc_df_name)
   }
-    
+  
 } else if(type == "DPMFA"){
   World$NewSolver("UncertainDynamicSolver")
   
-  for(pol in polymers){
+  for(i in 1:nrow(unique_combinations)){
+    source <- unique_combinations$Source[i]
+    pol <- unique_combinations$Polymer[i]
     emis_df_name <- paste0("emis_dyn_", pol)
     sample_df_name <- pasteo("sample_df_", pol)
     
@@ -517,12 +560,11 @@ elapsed_time <- end_time - start_time
 
 print(paste0("Elapsed time is ", elapsed_time))
 
-# 10000 runs will take 4 hours and 10 minutes per polymer-source combination.
 ```
 
 # Prep data and make plots
 
-```{r}
+```{r Initialize theme}
 
 # Create a plot theme
 plot_theme <-  theme(
@@ -531,50 +573,49 @@ plot_theme <-  theme(
   axis.text.x = element_text(size = 12, angle = 45, hjust = 1),     
   axis.text.y = element_text(size = 12),
   title = element_text(size=20),
-  panel.background = element_rect(fill = "white"),  # White background
-  panel.grid.major = element_line(color = "lightgrey", size = 0.5),  # Major grid lines in light grey
-  panel.grid.minor = element_line(color = "lightgrey", size = 0.25)
+  panel.background = element_rect(fill = "white"),  
+  panel.grid.major = element_line(color = "lightgrey", size = 0.5),  
+  panel.grid.minor = element_line(color = "lightgrey", size = 0.5)
 )
 
-# Plot the data for each polymer separately, for all selected compartments (different plots depending on PMFA or DPMFA)
+```
+
+```{r Make Mass plots}
+
+dt <- Sys.Date()
+
 if(type == "PMFA"){
-  for(mat in polymers){
-    solution_name <- paste0("solution_", mat)
-    df_name <- paste0("solved_ss_", mat)
+  for(name in solved_df_names){
+    solution_name <- name
     
-    Solution <- get(solution_name) |>
+    Solution <- get(solution_name)$SteadyStateMass |>
       mutate(RUN = as.integer(RUN)) |>
-      # mutate(EqMass = as.double(EqMass)) |>
-      mutate(Concentration = as.double(Concentration)) 
+      mutate(EqMass = as.double(EqMass)) 
     
-    solved <- get(df_name)
+    source <- str_remove(solution_name, "solved_ss_") |> 
+          str_replace("_[^_]*$", "") |>  # Removes everything after the last underscore
+          str_replace_all("_", " ")      # Replaces all underscores with spaces
     
-    subt <- paste0(mat, ", ", y)
+    pol <- str_extract(solution_name, "(?<=_)[^_]*$")
     
-    # Prepare data for plots
-    Input_Variables <- 
-      solved$Input_Variables |> unnest(data) 
-    Input_Emission <- 
-      solved$Input_Emission |> unnest(Emis) 
-    
-    Plot_data <- 
-      Input_Variables |> 
-      pivot_wider(names_from = c(varName,Scale,SubCompart,Unit), values_from = value) |> 
-      full_join(Solution) |>
-      full_join(Input_Emission, by = c("Abbr", "RUN"))
+    subt <- paste0(source, ", ", pol, ", ", y)
     
     # Aggregate plot data for all species
-    Plot_data_agg <- Plot_data |>
-      group_by(Scale, SubCompart, RUN, Unit.x, Units_per_SubCompart) |>
-      summarise(EqMass = sum(EqMass), Concentration = sum(Concentration))
-    
+    Plot_data_agg <- Solution |>
+      mutate(SubCompart = case_when(
+        SubCompart == "cloudwater" ~ "air",
+        TRUE ~ SubCompart
+      )) |>
+      group_by(Scale, SubCompart, RUN, Unit) |>
+      summarise(EqMass = sum(EqMass)) 
+      
     scales <- unique(Plot_data_agg$Scale)
     
-    # Make plots for each scale, one with mass and one with concentrations
+    # Make plots for each scale
     for (scale in scales) {
       df <- Plot_data_agg |>
         filter(Scale == scale) |>
-        mutate(concname = paste0(SubCompart, " (", Units_per_SubCompart, ")"))
+        mutate(concname = paste0(SubCompart, " (", Unit, ")"))
       
       # Filter out the compartments without mass
       masscomps <- df |>
@@ -596,14 +637,68 @@ if(type == "PMFA"){
         plot_theme +
         scale_y_continuous(trans = 'log10') +
         scale_fill_viridis_d() + 
-        # Customize the legend for this plot as well
-        theme(axis.text.x = element_blank(),  # Remove x-axis labels
-              legend.position = "bottom") +   # Move legend to the bottom
-        guides(fill = guide_legend(title = NULL))  # Remove legend title
+        theme(axis.text.x = element_blank(),  
+              legend.position = "bottom") +   
+        guides(fill = guide_legend(title = NULL)) + 
+      scale_y_log10(  # Apply logarithmic scale
+      # Major breaks at powers of 10
+      breaks = scales::trans_breaks("log10", function(x) 10^x),
+      
+      # Labels in human-readable form
+      labels = scales::trans_format("log10", scales::math_format(10^.x)),
+    ) 
       
       print(mass_p)
       
-      ggsave(paste0("N:/Documents/Simplebox/LEON-T_plots/Mass_plot_", scale, ".png"), plot=mass_p)
+      ggsave(paste0("R:/Projecten/E121554 LEON-T/03 - uitvoering WP3/Deliverable 3.5/Figures/Mass_plot_", scale,  "_", dt, "_", runs, "runs.png"), plot=mass_p)
+    }
+  }
+} else if(type == "DPMFA"){
+  for(name in solved_df_names){
+    
+  }
+}
+```
+
+```{r Make concentration plots}
+if(type == "PMFA"){
+  for(name in concentration_df_names){
+    solution_name <- name
+    
+    Solution <- get(solution_name) |>
+      mutate(RUN = as.integer(RUN)) |>
+      mutate(Concentration = as.double(Concentration)) 
+    
+    source <- str_remove(solution_name, "concentration_ss_") |> 
+          str_replace("_[^_]*$", "") |>  # Removes everything after the last underscore
+          str_replace_all("_", " ")      # Replaces all underscores with spaces
+    
+    pol <- str_extract(solution_name, "(?<=_)[^_]*$")
+    
+    subt <- paste0(source, ", ", pol, ", ", y)
+    
+    # Aggregate plot data for all species
+    Plot_data_agg <- Solution |>
+      group_by(Scale, SubCompart, RUN, Unit) |>
+      summarise(Concentration = sum(Concentration)) 
+      
+    scales <- unique(Plot_data_agg$Scale)
+    
+    # Make plots for each scale
+    for (scale in scales) {
+      df <- Plot_data_agg |>
+        filter(Scale == scale) |>
+        mutate(concname = paste0(SubCompart, " (", Unit, ")"))
+      
+      # Filter out the compartments without mass
+      masscomps <- df |>
+        filter(RUN == 1) |>
+        filter(Concentration != 0)
+      
+      masscomps <- masscomps$SubCompart
+      
+      df <- df |>
+        filter(SubCompart %in% masscomps) 
       
       # Concentration plot
       conc_p <- ggplot(df, mapping = aes(x = concname, y = Concentration, fill = concname)) +  
@@ -615,20 +710,26 @@ if(type == "PMFA"){
         plot_theme +
         scale_y_continuous(trans = 'log10') +
         scale_fill_viridis_d() +
-        theme(axis.text.x = element_blank(),  # Remove x-axis labels
-              legend.position = "bottom") +   # Move legend to the bottom
-        guides(fill = guide_legend(title = NULL))  # Remove legend title
+        theme(axis.text.x = element_blank(),  
+              legend.position = "bottom") +   
+        guides(fill = guide_legend(title = NULL))  + 
+      scale_y_log10(  # Apply logarithmic scale
+      # Major breaks at powers of 10
+      breaks = scales::trans_breaks("log10", function(x) 10^x),
+      
+      # Labels in human-readable form
+      labels = scales::trans_format("log10", scales::math_format(10^.x)),
+    ) 
       
       print(conc_p)
       
-      ggsave(paste0("N:/Documents/Simplebox/LEON-T_plots/Concentration_plot_", scale, ".png"), plot=conc_p)
+      ggsave(paste0("R:/Projecten/E121554 LEON-T/03 - uitvoering WP3/Deliverable 3.5/Figures/Concentration_plot_", scale, "_", "_", runs, "runs.png"), plot=conc_p)
     }
   }
-  
-} else if(type == "DPMFA"){        
-  
-  # TO DO: Make plots for DPMFA output
-  
+} else if(type == "DPMFA"){
+  for(name in solved_df_names){
+    
+  }
 }
 
 ```
